Aligned theme switch and fixed layout of header

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -18,6 +18,22 @@
   --hightlight-color: #93a74b;
 }
 
+#theme-switch {
+  /* height: 70px; */
+  /* width: 70px; */
+  padding: 0;
+  border: none;
+  border-radius: 50%;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  margin-right: 1rem;
+}
+
+#theme-switch svg:last-child{
+  display:none;
+}
+
 body {
     align-items: center;
     background-color: var(--base-color);
@@ -30,13 +46,13 @@ body {
     padding-bottom: 2rem;
     padding-top: 2rem;
   }
+
   .container {
-    
     background: var(--base-variant);
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    max-width: 52rem;
+    max-width: 55rem;
     min-height: 100vh;
     opacity: .8;
     padding: 2rem;
@@ -46,6 +62,11 @@ body {
     .container {
       max-width: 44rem;
     }
+  }
+
+  .name-and-themeSwitch { 
+    display: flex;
+    justify-content: space-between;
   }
 
   .footer {
